src/objects/P7S1_Format__c.object
<CustomObject>
    <description>Formate wie zum Beispiel Anna und die Liebe oder 2 Broke Grils</description>
    <fields>
        <fullName>P7S1_Assettyp__c</fullName>
        <description>Für welche Bereiche haben wir entsprechende Rechte zur Ausstrahlung bzw. für welche Bereich ist dieses Format relevant?</description>
        <inlineHelpText>Für welche Bereiche haben wir entsprechende Rechte zur Ausstrahlung bzw. für welche Bereich ist dieses Format relevant?</inlineHelpText>
        <label>Assettyp</label>
        <picklist>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>P7S1_GueltigBis__c</fullName>
        <description>Bis wann ist dieses Format gültig?</description>
        <inlineHelpText>Bis wann ist dieses Format gültig?</inlineHelpText>
        <label>gültig bis</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_GueltigVon__c</fullName>
        <description>ab wann ist dieses Format gültig?</description>
        <inlineHelpText>Ab wann ist dieses Format gültig?</inlineHelpText>
        <label>gültig von</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IstGueltig__c</fullName>
        <description>Ist Format zum heutigen Tag gültig.</description>
        <formula>P7S1_GueltigVon__c &lt;=  TODAY()
&amp;&amp;
TODAY() &lt;= P7S1_GueltigBis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ist Format zum heutigen Tag gültig.</inlineHelpText>
        <label>Ist aktuell gültig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_PowerMamsContentID__c</fullName>
        <description>Verbindung dieses Formates zu PowerMams ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Verbindung dieses Formates zu PowerMams ID</inlineHelpText>
        <label>PowerMams Content ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_Unique__c</fullName>
        <description>wird gefüllt per Workflow aus Name und stellt damit Unique-Eigenschaft für Name sicher</description>
        <inlineHelpText>stellt Unique-Eigenschaft für Name sicher</inlineHelpText>
        <label>P7S1_Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7s1_Beschreibung__c</fullName>
        <label>Beschreibung</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Format</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Assettyp__c</columns>
        <columns>P7s1_Beschreibung__c</columns>
        <columns>P7S1_GueltigVon__c</columns>
        <columns>P7S1_GueltigBis__c</columns>
        <columns>P7S1_IstGueltig__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Digital</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Assettyp__c</columns>
        <columns>P7s1_Beschreibung__c</columns>
        <columns>P7S1_GueltigVon__c</columns>
        <columns>P7S1_GueltigBis__c</columns>
        <columns>P7S1_IstGueltig__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Assettyp__c</field>
            <operation>includes</operation>
            <value>Digital</value>
        </filters>
        <label>Digital</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>TV</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Assettyp__c</columns>
        <columns>P7s1_Beschreibung__c</columns>
        <columns>P7S1_GueltigVon__c</columns>
        <columns>P7S1_GueltigBis__c</columns>
        <columns>P7S1_IstGueltig__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Assettyp__c</field>
            <operation>includes</operation>
            <value>TV</value>
        </filters>
        <label>TV</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>aktuell_g_ltig</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Assettyp__c</columns>
        <columns>P7s1_Beschreibung__c</columns>
        <columns>P7S1_GueltigVon__c</columns>
        <columns>P7S1_GueltigBis__c</columns>
        <columns>P7S1_IstGueltig__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_IstGueltig__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>aktuell gültig</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>aktuell_ung_ltig</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Assettyp__c</columns>
        <columns>P7s1_Beschreibung__c</columns>
        <columns>P7S1_GueltigVon__c</columns>
        <columns>P7S1_GueltigBis__c</columns>
        <columns>P7S1_IstGueltig__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_IstGueltig__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>aktuell ungültig</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Format-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>P7S1_VonKleinerBis</fullName>
        <active>true</active>
        <errorConditionFormula>P7S1_GueltigVon__c &gt; P7S1_GueltigBis__c</errorConditionFormula>
        <errorMessage>Das Von-Datum darf nicht größer als das Bis-Datum sein</errorMessage>
    </validationRules>
</CustomObject>